--- a/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Vidly/Views/Customers/CustomerForm.cshtml
@@ -33,6 +33,7 @@
         @Html.LabelFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-inpt" })
     </div>
     @Html.HiddenFor(c => c.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
